booking info in table details
